Link Phase 0 technical overview on website

--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
       • System-level research for quantum satellite payloads
     </p>
 
-    <h2>Open Research</h2>
-    <p>
-      Our work is publicly documented on GitHub:
-      <br>
-      <a href="https://github.com/SPACE-ALEPH">github.com/SPACE-ALEPH</a>
-    </p>
+<h2>Open Research</h2>
+<p>
+  Our work is publicly documented and technically outlined:
+</p>
+<p>
+  • <a href="ℵ - SYSTEMS _Phase-0_Technical_Overview">
+    Phase 0 Technical Overview (PDF)
+  </a><br>
+  • <a href="https://github.com/SPACE-ALEPH">
+    GitHub Repositories
+  </a>
+</p>
 
-    <h2>Status</h2>
-    <p>
-      Pre-incorporation research phase.<br>
-      Actively building and open to technical dialogue.
-    </p>
 
     <footer>
       © ℵ – SYSTEMS · SPACE-ALEPH
