--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   Our work is publicly documented and technically outlined:
 </p>
 <p>
-  • <a href="ℵ - SYSTEMS _Phase-0_Technical_Overview">
+  • <a href="ℵ - SYSTEMS_Phase-0_Technical_Overview">
     Phase 0 Technical Overview (PDF)
   </a><br>
   • <a href="https://github.com/SPACE-ALEPH">
