--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <h2>Mission</h2>
     <p>
-      ℵ – SYSTEMS develops software-first architectures for autonomous
+      ℵ - SYSTEMS develops software-first architectures for autonomous
       and secure space systems, with a focus on future quantum computing
       satellite missions.
     </p>
@@ -67,7 +67,7 @@
   Our work is publicly documented and technically outlined:
 </p>
 <p>
-  • <a href="ℵ - SYSTEMS_Phase-0_Technical_Overview">
+  • <a href="https://github.com/SPACE-ALEPH/space-aleph.github.io/blob/main/%E2%84%B5%20-%20SYSTEMS%20_Phase-0_Technical_Overview.pdf">
     Phase 0 Technical Overview (PDF)
   </a><br>
   • <a href="https://github.com/SPACE-ALEPH">
