--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   Our work is publicly documented and technically outlined:
 </p>
 <p>
-  • <a href="https://github.com/SPACE-ALEPH/space-aleph.github.io/blob/main/%E2%84%B5%20-%20SYSTEMS%20_Phase-0_Technical_Overview.pdf">
+  • <a href="ℵ - SYSTEMS _Phase-0_Technical_Overview.pdf">
     Phase 0 Technical Overview (PDF)
   </a><br>
   • <a href="https://github.com/SPACE-ALEPH">
